--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "^2.9.2"
+fastapi = "^0.115.4"
+uvicorn = "^0.32.0"
 
 
 [build-system]
