--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pydantic = "^2.9.2"
+pydantic = {extras = ["email"], version = "^2.9.2"}
 fastapi = "^0.115.4"
 uvicorn = "^0.32.0"
+streamlit = "^1.40.1"
 
 
 [build-system]
